Fix scrollbar, colors, make UI simpler

--- a/src/app/matrix/matrix.component.css
+++ b/src/app/matrix/matrix.component.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  accent-color: var(--accent);
 }
 
 .outer:hover {
@@ -15,9 +16,10 @@
   flex-direction: row; 
   align-items: stretch;
   position: relative; 
-  background-color: rgb(240, 240, 240);
+  background-color: var(--accent);
   border-radius: 15px;
   opacity: 0;
+  overflow: hidden;
 }
 
 .dragHandle {
@@ -27,15 +29,11 @@
 }
 
 .deleteIcon {
-  font-size: 1.0em;
-  height: 1.2em;
   width: 1.5em;
-  display:flex;
-  border-radius: 0px 15px 15px 0px;
+  text-align: center;
+  align-content: center;
   cursor: pointer;
   transition: all 0.4s;
-  align-items: center;
-  justify-content: center;
 }
 
 .deleteIcon:hover {
@@ -78,7 +76,7 @@ mtd {
 }
 
 .selected {
-  background-color: rgb(216, 132, 209);
+  background-color: var(--accent);
   border-radius: 1ex;
   font-weight: bold;
 }
